--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,129 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@keyframes promptBlink {
+  0% {
+    opacity: 1;
+  }
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+  50% {
+    opacity: 0;
+  }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+  to {
+    opacity: 1;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+body,
+html {
+  padding: 0;
+  margin: 0;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #000;
+  color: #fff;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+a {
+  color: #0f0 !important;
+  text-decoration: none;
+}
+
+a.selected,
+a:hover {
+  text-decoration: underline;
+}
+
+a.button {
+  text-decoration: none !important;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.asciiart {
+  line-height: 1.1em;
+  color: #0b0;
+}
+
+.asciiart,
+main {
+  font-family: Courier New, Monospace;
+}
+
+main {
+  background-color: linear-gradient(#000200, #000200);
+  background: #000900;
+  background: linear-gradient(140deg, #002000, #000900 33%);
+}
+
+main > div {
+  max-width: 800px;
+  margin: 32px auto 0;
+}
+
+main > div > * {
+  width: 100%;
+  margin: 0 auto;
+}
+
+main p {
+  margin-top: 8px;
+}
+
+main > div:last-child > :last-child:after {
+  content: " █";
+  animation: promptBlink 2s infinite;
+  transition: all 0s;
+}
+
+main h2:before {
+  content: "$> ";
+  color: #0bf;
+}
+
+main h3:before {
+  content: "~ ";
+  color: #f90;
+}
+
+main h2 {
+  font-size: 1.4em;
+  text-transform: uppercase;
+}
+
+main h3 {
+  font-size: 1.2em;
+  color: #aaa;
+}
+
+main h3 strong {
+  color: #fff;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+ol.customList,
+ul.customList {
+  -webkit-padding-start: 18px !important;
+  padding-inline-start: 18px !important;
+}
+
+ol.customList > li,
+ul.customList > li {
+  list-style-type: "> ";
+}
+
+ol > li > div,
+ul > li > div {
+  margin-top: 16px;
+}
+
+p {
+  color: #aaa;
 }
